--- a/Debug/makefile
+++ b/Debug/makefile
@@ -10,7 +10,13 @@ GEN_OPTS__FLAG :=
 GEN_CMDS__FLAG := 
 
 ORDERED_OBJS += \
+"./Timer.obj" \
+"./button.obj" \
+"./lcd.obj" \
 "./main.obj" \
+"./object.obj" \
+"./scan.obj" \
+"./servo.obj" \
 "./tm4c123gh6pm_startup_ccs.obj" \
 "../tm4c123gh6pm.cmd" \
 $(GEN_CMDS__FLAG) \
@@ -156,8 +162,8 @@ cpre288-final-project.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "main.obj" "tm4c123gh6pm_startup_ccs.obj" 
-	-$(RM) "main.d" "tm4c123gh6pm_startup_ccs.d" 
+	-$(RM) "Timer.obj" "button.obj" "lcd.obj" "main.obj" "object.obj" "scan.obj" "servo.obj" "tm4c123gh6pm_startup_ccs.obj" 
+	-$(RM) "Timer.d" "button.d" "lcd.d" "main.d" "object.d" "scan.d" "servo.d" "tm4c123gh6pm_startup_ccs.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
